[package]
name = "protobuf-build"
version = "0.12.3"
authors = ["Nick Cameron <nrc@ncameron.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/tikv/protobuf-build"
homepage = "https://github.com/tikv/protobuf-build"
description = "Utility functions for generating Rust code from protobufs (using protobuf-rust or Prost)"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf-codegen", "protobuf/with-bytes", "regex"]
grpcio-protobuf-codec = ["grpcio-compiler/protobuf-codec", "protobuf-codec"]
prost-codec = ["syn", "quote", "prost-build", "proc-macro2"]
grpcio-prost-codec = ["grpcio-compiler/prost-codec", "prost-codec"]

[dependencies]
proc-macro2 = { version = "1", optional = true }
protobuf = { version = "2.8", optional = true }
protobuf-codegen = { version = "2", optional = true }
grpcio-compiler = { version = ">=0.8", default-features = false, optional = true }
prost-build = { version = "0.7", optional = true }
regex = { version = "1.3", optional = true }
syn = { version = "1.0", features = ["full"], optional = true }
quote = { version = "1.0", optional = true }
bitflags = "1.2"

[workspace]
members = ["tests"]
