[package]
name = "tests"
version = "0.1.0"
authors = ["Neil Shen <overvenus@gmail.com>"]
edition = "2018"
publish = false
build = "build.rs"

[features]
protobuf-codec = ["protobuf-build/grpcio-protobuf-codec"]
prost-codec = ["protobuf-build/grpcio-prost-codec"]

[dependencies]
protobuf = "2"
prost = "0.9"
prost-derive = "0.9"
lazy_static = "1.4"

[build-dependencies]
protobuf-build = { path = "../", default-features = false }
